@@ -14,7 +14,9 @@ In progress - pre-release
           qpp::Gates::MODMUL() - quantum modular multiplication
     - Added Shor's algorithm example in "examples/shor.cpp"
     - introduced the largest unsigned index qpp::idx_inf in "constants.h"
-    - Added a new exception class qpp::exception::QuditAlreadyMeasured
+    - Added new exception classes qpp::exception::QuditAlreadyMeasured
+      (self-explanatory) and qpp::exception::Duplicates (thrown when a system
+      such as a std::vector contains duplicate elements)
     - Added std::string qpp::Gates::get_name(const cmat&) function which returns
       the names of the most common (one, two and three) qubit gates
     - Added qpp::experimental::QCircuitDescription and
